<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="245dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-81dp"
        android:layout_marginTop="2dp"
        android:src="@drawable/bentuk"
        android:contentDescription="@string/lakukan" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/btn_back1"
        android:contentDescription="@string/lakukann"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt4"
        android:text="@string/selamat_datang_kembali"
        android:layout_marginTop="40dp"
        android:layout_below="@id/img1"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:fontFamily="@font/poppinssemibold"

        />

    <ImageView
        android:id="@+id/login"
        android:layout_width="90dp"
        android:layout_height="101dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt4"
        android:layout_marginTop="20dp"
        android:src="@drawable/login"
        android:contentDescription="@string/doit"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/login"
        android:padding="50dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/white"
            android:hint="@string/uname"
            android:inputType="text"
            android:textSize="15sp"
            android:paddingStart="20dp"
            android:fontFamily="@font/poppinsregular"
            android:id="@+id/etUsername"
            android:autofillHints=""
            tools:ignore="RtlSymmetry" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:background="@drawable/button_shape"
                android:paddingRight="20dp"
                android:backgroundTint="@color/white"
                android:hint="@string/pass"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:inputType="textPassword"
                android:fontFamily="@font/poppinsregular"
                android:layout_marginTop="15dp"
                android:id="@+id/etPassword"
                android:autofillHints="" />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:width="300dp"
            android:height="40dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/poppinssemibold"
            android:gravity="center"
            android:text="@string/msk"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:id="@+id/btnMasuk"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/belum_punya_akun"
                android:textColor="#616161"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dftr"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/poppinsregular"
                android:id="@+id/txtDaftar"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>